k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-redis
  namespace: wisave
  labels:
    app: portal-redis
spec:
  type: ClusterIP
  selector:
    app: portal-redis
  ports:
    - port: 6379
      targetPort: 6379
